# Blazelint

./: .gitignore  BNF.md  Cargo.toml  LICENSE  README.md  TODO.md  explain.md  notes.md  test.bal
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release-crate.yml  release-srs.yml
docs/: BNF.md  BNF_EXPLAIN.md  IMPLEMENTATION_NOTES.md  QUICK_REFERENCE.md  SRS.typ  TEST_SUMMARY.md  pipeline_overview.md
docs/srs/: srs_doc.md
docs/uml/: class-diagram.mmd  flow-chart.mmd  sequence-diagram.mmd
scripts/: check-grammar.sh
src/: ast.rs  config.rs  config.toml  diagnostics.rs  errors.rs  example.bal  lexer.rs  linter.rs  main.rs  parser.rs  semantic.rs  token.rs  utils.rs
src/linter/: mod.rs  registry.rs
src/linter/rules/: camel_case.rs  constant_case.rs  line_length.rs  max_function_length.rs  missing_return.rs  mod.rs  unused_variables.rs
tests/: cli_diagnostics.rs  test.bal
tests/test-bal-files/: all_rules_test.bal  comprehensive_test.bal  error_recovery_demo.bal  long_function.bal  missing_return.bal  multiple_errors.bal  simple_errors.bal  unused_variable.bal
